# src/interfaces/dtos/auth.dto.ts
@@ -7,3 +7,8 @@ export class LoginDto {
   declare email: string;
   declare password: string;
 }
+
+export class PasswordResetDto {
+  declare password: string;
+  declare token: string;
+}
