# src/routes/auth.router.ts
@@ -6,5 +6,7 @@ router.post("/signup", authController.signup);
 router.post("/verify_account", authController.accountVerification);
 router.post("/signin", authController.signin);
 router.post("/generate_access_token", authController.generateAccessToken);
+router.patch("/forgot_password/:email", authController.forgotPassword);
+router.post("/reset_password", authController.resetPassword);
 
 export default router;
